@@ -81,6 +81,7 @@ $messages['en'] = array(
 	'poc-sinfo-show-updaloaddirs'		=> 'Show upload directories',
 	'poc-sinfo-stored-codes-code'		=> 'Code',
 	'poc-sinfo-stored-codes-conn'		=> 'Connection',
+	'poc-sinfo-stored-codes-count'		=> 'Count',
 	'poc-sinfo-stored-codes-date'		=> 'Date',
 	'poc-sinfo-stored-codes-lang'		=> 'Language',
 	'poc-sinfo-stored-codes-path'		=> 'Path',
@@ -167,6 +168,7 @@ $messages['es'] = array(
 	'poc-sinfo-show-updaloaddirs'		=> 'Mostrar directorios de subida',
 	'poc-sinfo-stored-codes-code'		=> 'Código',
 	'poc-sinfo-stored-codes-conn'		=> 'Connexion',
+	'poc-sinfo-stored-codes-count'		=> 'Usos',
 	'poc-sinfo-stored-codes-date'		=> 'Fecha',
 	'poc-sinfo-stored-codes'		=> 'Fuentes Almacenados',
 	'poc-sinfo-stored-codes-lang'		=> 'Lenguaje',
